--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.5",
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@ngx-translate/core": "^16.0.3",
+    "@ngx-translate/http-loader": "^16.0.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "ngx-translate": "^0.0.1-security",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
